@@ -42,34 +42,6 @@ begin_import
 import|import
 name|org
 operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|oncrpc
-operator|.
-name|RpcFrameDecoder
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
-name|apache
-operator|.
-name|hadoop
-operator|.
-name|oncrpc
-operator|.
-name|XDR
-import|;
-end_import
-
-begin_import
-import|import
-name|org
-operator|.
 name|jboss
 operator|.
 name|netty
@@ -301,8 +273,9 @@ name|Channels
 operator|.
 name|pipeline
 argument_list|(
-operator|new
-name|RpcFrameDecoder
+name|RpcUtil
+operator|.
+name|constructRpcFrameDecoder
 argument_list|()
 argument_list|,
 operator|new
