@@ -230,8 +230,17 @@ name|XDR
 argument_list|(
 name|buf
 operator|.
-name|array
+name|toByteBuffer
 argument_list|()
+operator|.
+name|asReadOnlyBuffer
+argument_list|()
+argument_list|,
+name|XDR
+operator|.
+name|State
+operator|.
+name|READING
 argument_list|)
 decl_stmt|;
 name|InetAddress
